--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "cytoscape": "^3.2.0"
   },
   "dependencies": {
+    "cytoscape-avsdf": "^1.0.0",
     "lodash.memoize": "^4.1.2",
     "lodash.throttle": "^4.1.1"
   }
